@@ -1,6 +1,6 @@
 ## Process this file with automake to produce Makefile.in
 
-SUBDIRS = m4 po intl nih init doc # util compat/sysv logd
+SUBDIRS = m4 po intl nih init dbus doc # util compat/sysv logd
 
 EXTRA_DIST = HACKING ChangeLog.nih
 
