@@ -1,0 +1,6 @@
+## Process this file with automake to produce Makefile.in
+
+EXTRA_DIST = \
+	com.ubuntu.Upstart.xml \
+	com.ubuntu.Upstart.Job.xml \
+	com.ubuntu.Upstart.Instance.xml
