@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+
+<node name="/com/ubuntu/Upstart/jobs/*">
+  <interface name="com.ubuntu.Upstart.Job">
+  </interface>
+</node>
